--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,19 @@
 		src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" 
 		integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" 
 		crossorigin="anonymous"></script>
+	<script 
+		src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
+		crossorigin="anonymous"></script>
+	<script 
+		src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" 
+		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" 
+		crossorigin="anonymous"></script>
+	<link 
+		rel="stylesheet" 
+		href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
+		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
+		crossorigin="anonymous">
 	
 	
 	<script th:inline="javascript">
@@ -17,36 +30,41 @@
 		var arrPerc = [];
 		var arrTest = [];
 		var arrNewPositive = [];
+		var arrCasualties = [];
 		data.forEach(element => {
 			arrLabel.push(element.date);
 			arrPerc.push(element.infectionPercentage);
 			arrTest.push(element.newTests);
 			arrNewPositive.push(element.newInfections);
+			arrCasualties.push(element.casualtiesPercentage);
 		});
 	
 		window.onload = function(){
 			testsChart();
 			percInfections();
+			percCasualties();
 		}
 		
 		function testsChart(){
-			var ctx = document.getElementById('myChart');
+			var ctx = document.getElementById('chartTests');
 			var myChart = new Chart(ctx, {
 			    type: 'line',
 			    data: {
 			        labels: arrLabel,
 			        datasets: [{
-			            label: '# New Infections',
+			            label: 'Nuove infezioni',
 			            data: arrNewPositive,
 			            stack: "Stack 0",
 			            borderColor: "rgb(219, 53, 53, 1)",
+			            backgroundColor: "rgb(219, 53, 53, 1)",
 			            fill: false,
 			            pointRadius: 0
 			        },{
-			            label: '# Test',
+			            label: 'Test Eseguiti',
 			            data: arrTest,
 			            stack: "Stack 0",
 			            borderColor: "rgb(53, 219, 108, 1)",
+			            backgroundColor: "rgb(53, 219, 108, 1)",
 			            fill: false,
 			            pointRadius: 0
 			        }]
@@ -64,24 +82,58 @@
 						mode: 'index',
 						intersect: false
 					},
+					responsive: true
 			    }
 			});
 		}
 		
 		function percInfections(){
-			var ctx = document.getElementById('percInfezioni');
+			var ctx = document.getElementById('chartInfected');
 			var myChart = new Chart(ctx, {
 			    type: 'line',
 			    data: {
 			        labels: arrLabel,
 			        datasets: [{
-			            label: '# Perc Infetti',
+			            label: '% Infetti',
 			            data: arrPerc,
 			            borderColor: "rgb(25, 194, 255, 1)",
+			            backgroundColor: "rgb(25, 194, 255, 1)",
 			            fill: false,
 			            pointRadius: 0
 			        }]
 			    },
+			    options:{
+			    	responsive: true,
+			    	tooltips: {
+						mode: 'index',
+						intersect: false
+					},
+			    }
+			    
+			});
+		}
+		function percCasualties(){
+			var ctx = document.getElementById('chartCasualties');
+			var myChart = new Chart(ctx, {
+			    type: 'line',
+			    data: {
+			        labels: arrLabel,
+			        datasets: [{
+			            label: '% Decessi',
+			            data: arrCasualties,
+			            borderColor: "rgb(245, 152, 66, 1)",
+			            backgroundColor: "rgb(245, 152, 66, 1)",
+			            fill: false,
+			            pointRadius: 0
+			        }]
+			    },
+			    options:{
+			    	responsive: true,
+			    	tooltips: {
+						mode: 'index',
+						intersect: false
+					},
+			    }
 			    
 			});
 		}
@@ -90,8 +142,18 @@
 	
 </head>
 <body>
-	<h1>Italian COVID-19 Situation</h1>
-	<canvas id="myChart" width="400" height="150"></canvas>
-	<canvas id="percInfezioni" width="400" height="150"></canvas>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-12 col-lg-6">
+				<canvas id="chartTests" ></canvas>
+			</div>
+			<div class="col-12 col-lg-6">
+				<canvas id="chartInfected"></canvas>
+			</div>
+			<div class="col-12 col-lg-6">
+				<canvas id="chartCasualties"></canvas>
+			</div>
+		</div>		
+	</div>
 </body>
 </html>
