--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>COVID-19 ITALY</title>
+	<meta name="theme-color" content="#d0d0d0">
+	<meta name="msapplication-navbutton-color" content="#d0d0d0">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#d0d0d0">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="mobile-web-app-capable" content="yes" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" id="vp" content="initial-scale=1.0,user-scalable=no,maximum-scale=1"/>
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<script 
 		src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" 
 		integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" 
