--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,8 +16,8 @@
 		integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" 
 		crossorigin="anonymous"></script>
 	<script 
-		src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
+		src="https://code.jquery.com/jquery-3.5.1.min.js" 
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
 		crossorigin="anonymous"></script>
 	<script 
 		src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" 
@@ -27,6 +27,14 @@
 		rel="stylesheet" 
 		href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
 		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
+		crossorigin="anonymous">
+	<script 
+		src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" 
+		integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" 
+		crossorigin="anonymous"></script>
+	<link 
+		rel="stylesheet" 
+		href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" 
 		crossorigin="anonymous">
 	
 	
@@ -39,18 +47,22 @@
 		var arrTest = [];
 		var arrNewPositive = [];
 		var arrCasualties = [];
+		var arrPercCasualties = [];
 		data.forEach(element => {
 			arrLabel.push(element.date);
 			arrPerc.push(element.infectionPercentage);
 			arrTest.push(element.newTests);
 			arrNewPositive.push(element.newInfections);
-			arrCasualties.push(element.casualtiesPercentage);
+			arrCasualties.push(element.newCasualties);
+			arrPercCasualties.push(element.casualtiesPercentage);
 		});
 	
 		window.onload = function(){
 			testsChart();
 			percInfections();
+			casualties();
 			percCasualties();
+			setDate();
 		}
 		
 		function testsChart(){
@@ -79,11 +91,14 @@
 			    },
 			    options: {
 			    	scales: {
+			    		gridLines: {
+			    			
+			    		},
 			            xAxes: [{
-			                stacked: true
+			                stacked: true,
 			            }],
 			            yAxes: [{
-			                stacked: true
+			                stacked: true,
 			            }]
 			        },
 			        tooltips: {
@@ -102,7 +117,7 @@
 			    data: {
 			        labels: arrLabel,
 			        datasets: [{
-			            label: '% Infetti',
+			            label: '% Infetti su tamponi eseguiti',
 			            data: arrPerc,
 			            borderColor: "rgb(25, 194, 255, 1)",
 			            backgroundColor: "rgb(25, 194, 255, 1)",
@@ -120,14 +135,14 @@
 			    
 			});
 		}
-		function percCasualties(){
+		function casualties(){
 			var ctx = document.getElementById('chartCasualties');
 			var myChart = new Chart(ctx, {
 			    type: 'line',
 			    data: {
 			        labels: arrLabel,
 			        datasets: [{
-			            label: '% Decessi',
+			            label: 'Decessi',
 			            data: arrCasualties,
 			            borderColor: "rgb(245, 152, 66, 1)",
 			            backgroundColor: "rgb(245, 152, 66, 1)",
@@ -145,12 +160,92 @@
 			    
 			});
 		}
+		
+		function percCasualties(){
+			var ctx = document.getElementById('chartPercCasualties');
+			var myChart = new Chart(ctx, {
+			    type: 'line',
+			    data: {
+			        labels: arrLabel,
+			        datasets: [{
+			            label: '% Decessi su infetti',
+			            data: arrPercCasualties,
+			            borderColor: "rgb(237, 78, 237, 1)",
+			            backgroundColor: "rgb(237, 78, 237, 1)",
+			            fill: false,
+			            pointRadius: 0
+			        }]
+			    },
+			    options:{
+			    	responsive: true,
+			    	tooltips: {
+						mode: 'index',
+						intersect: false
+					},
+			    }
+			    
+			});
+		}
+		
+		var dateFormat = "dd/mm/yy";
+		function setDate(){
+			var dateFrom = $( "#dateFrom" ).datepicker({
+								minDate: "24/02/2020",
+					            changeMonth: true,
+					            numberOfMonths: 1,
+					            dateFormat: dateFormat
+					          });
+			var dateTo = $( "#dateTo" ).datepicker({
+					            changeMonth: true,
+					            numberOfMonths: 1,
+					            dateFormat: dateFormat
+					          });
+			
+			dateFrom.on( "change", function() {
+		          dateTo.datepicker( "option", "minDate", getDate( this ) );
+		          updateDates();
+	        });
+			dateTo.on( "change", function() {
+		        dateFrom.datepicker( "option", "maxDate", getDate( this ) );
+		        updateDates();
+		      })
+		}
+		
+		function updateDates(){
+			var from = $.datepicker.formatDate('yymmdd', getDate(document.getElementById("dateFrom")));
+			var to = $.datepicker.formatDate('yymmdd', getDate(document.getElementById("dateTo")));
+			if(from != "" && to != ""){
+				var url ="/Covid19Italy/?from=" + from + "&to=" + to;
+				window.open(url, "_self");
+			}
+		}
+		
+		function getDate( element ) {
+		      var date;
+		      try {
+		        date = $.datepicker.parseDate( dateFormat, element.value );
+		      } catch( error ) {
+		        date = null;
+		      }
+		 
+		      return date;
+		    }
 	/*]]>*/
 	</script>
 	
 </head>
 <body>
 	<div class="container-fluid">
+		<div class="row">
+			<div class="col-12 col-sm-4">
+				<label for="dateFrom">Data Da</label>
+				<input type="text" id="dateFrom" class="form-control" th:value="${from}">
+			</div>
+			<div class="col-12 col-sm-4">
+				<label for="dateTo">Data A</label>
+				<input type="text" id="dateTo" class="form-control" th:value="${to}">
+			</div>
+		</div>
 		<div class="row">
 			<div class="col-12 col-lg-6">
 				<canvas id="chartTests" ></canvas>
@@ -160,6 +255,9 @@
 			</div>
 			<div class="col-12 col-lg-6">
 				<canvas id="chartCasualties"></canvas>
+			</div>
+			<div class="col-12 col-lg-6">
+				<canvas id="chartPercCasualties"></canvas>
 			</div>
 		</div>		
 	</div>
