--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" id="vp" content="initial-scale=1.0,user-scalable=no,maximum-scale=1"/>
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	
+	<meta property="og:title" content="Marco Solina | Italian Covid Status">
+	<meta name="description" content="Marco Solina : Every day the news provides the updated numbers with respect the Covid Situation in Italy. I don't think that the way that the news gives us the number is appropriate, hence I create this simple page, which retrieves the numbers from the Goverment Website, and it shows the same number but using charts">
+	<meta property="og:description" content="Marco Solina : Every day the news provides the updated numbers with respect the Covid Situation in Italy. I don't think that the way that the news gives us the number is appropriate, hence I create this simple page, which retrieves the numbers from the Goverment Website, and it shows the same number but using charts">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="http://marco.selfip.net/Covid19Italy">
+	<meta property="og:image" content="/myProject/original/2.jpg">
+	
 	<script 
 		src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" 
 		integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" 
