--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 	<meta name="description" content="Marco Solina : Every day the news provides the updated numbers with respect the Covid Situation in Italy. I don't think that the way that the news gives us the number is appropriate, hence I create this simple page, which retrieves the numbers from the Goverment Website, and it shows the same number but using charts">
 	<meta property="og:description" content="Marco Solina : Every day the news provides the updated numbers with respect the Covid Situation in Italy. I don't think that the way that the news gives us the number is appropriate, hence I create this simple page, which retrieves the numbers from the Goverment Website, and it shows the same number but using charts">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://marco.selfip.net/Covid19Italy">
+	<meta property="og:url" content="https://marco.selfip.net/Covid19Italy">
 	<meta property="og:image" content="/Covid19Italy/pictures/covid-coronavirus.jpg">
 	
 	<script 
