--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 	<meta property="og:description" content="Marco Solina : Every day the news provides the updated numbers with respect the Covid Situation in Italy. I don't think that the way that the news gives us the number is appropriate, hence I create this simple page, which retrieves the numbers from the Goverment Website, and it shows the same number but using charts">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://marco.selfip.net/Covid19Italy">
-	<meta property="og:image" content="/Covid19Italy/pictures/covid-coronavirus.jpg">
+	<meta property="og:image" th:content="@{/pictures/covid-coronavirus.jpg}">
 	
 	<script 
 		src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" 
@@ -44,242 +44,20 @@
 		rel="stylesheet" 
 		href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" 
 		crossorigin="anonymous">
+	<script th:src="@{/js/CovidChart.js}"></script>	
+	<script th:src="@{/js/CovidChartDataset.js}"></script>
+	<script th:src="@{/js/CovidCommon.js}"></script>	
 	
 	
 	<script th:inline="javascript">
 	/*<![CDATA[*/
 	    var data = /*[[${data}]]*/ [];
 	
-		var arrLabel = [];
-		var arrPerc = [];
-		var arrTest = [];
-		var arrNewPositive = [];
-		var arrCasualties = [];
-		var arrPercCasualties = [];
-		var arrNewHospitalized = [];
-		var arrNewIntensiveTherapy = [];
-		var arrNewRecovered = [];
-		data.forEach(element => {
-			arrLabel.push(element.date);
-			arrPerc.push(element.infectionPercentage);
-			arrTest.push(element.newTests);
-			arrNewPositive.push(element.newInfections);
-			arrCasualties.push(element.newCasualties);
-			arrPercCasualties.push(element.casualtiesPercentage);
-			arrNewHospitalized.push(element.newHospitalized);
-			arrNewIntensiveTherapy.push(element.newIntensiveTherapy);
-			arrNewRecovered.push(element.newRecovered);
-		});
-	
 		window.onload = function(){
-			testsChart();
-			percInfections();
-			casualties();
-			percCasualties();
-			setDate();
-			hospitalStatus();
+			CovidCommon.init(data);
+			CovidCommon.drawTheCharts();
 		}
 		
-		function testsChart(){
-			var ctx = document.getElementById('chartTests');
-			var myChart = new Chart(ctx, {
-			    type: 'line',
-			    data: {
-			        labels: arrLabel,
-			        datasets: [{
-			            label: 'Nuove infezioni',
-			            data: arrNewPositive,
-			            stack: "Stack 0",
-			            borderColor: "rgb(219, 53, 53, 1)",
-			            backgroundColor: "rgb(219, 53, 53, 1)",
-			            fill: false,
-			            pointRadius: 0
-			        },{
-			            label: 'Test Eseguiti',
-			            data: arrTest,
-			            stack: "Stack 1",
-			            borderColor: "rgb(53, 219, 108, 1)",
-			            backgroundColor: "rgb(53, 219, 108, 1)",
-			            fill: false,
-			            pointRadius: 0
-			        }]
-			    },
-			    options: {
-			        tooltips: {
-						mode: 'index',
-						intersect: false
-					},
-					responsive: true
-			    }
-			});
-		}
-		
-		function percInfections(){
-			var ctx = document.getElementById('chartInfected');
-			var myChart = new Chart(ctx, {
-			    type: 'line',
-			    data: {
-			        labels: arrLabel,
-			        datasets: [{
-			            label: '% Infetti su tamponi eseguiti',
-			            data: arrPerc,
-			            borderColor: "rgb(25, 194, 255, 1)",
-			            backgroundColor: "rgb(25, 194, 255, 1)",
-			            fill: false,
-			            pointRadius: 0
-			        }]
-			    },
-			    options:{
-			    	responsive: true,
-			    	tooltips: {
-						mode: 'index',
-						intersect: false
-					},
-			    }
-			    
-			});
-		}
-		function casualties(){
-			var ctx = document.getElementById('chartCasualties');
-			var myChart = new Chart(ctx, {
-			    type: 'line',
-			    data: {
-			        labels: arrLabel,
-			        datasets: [{
-			            label: 'Decessi',
-			            data: arrCasualties,
-			            borderColor: "rgb(245, 152, 66, 1)",
-			            backgroundColor: "rgb(245, 152, 66, 1)",
-			            fill: false,
-			            pointRadius: 0
-			        }]
-			    },
-			    options:{
-			    	responsive: true,
-			    	tooltips: {
-						mode: 'index',
-						intersect: false
-					},
-			    }
-			    
-			});
-		}
-		
-		function percCasualties(){
-			var ctx = document.getElementById('chartPercCasualties');
-			var myChart = new Chart(ctx, {
-			    type: 'line',
-			    data: {
-			        labels: arrLabel,
-			        datasets: [{
-			            label: '% Decessi su infetti',
-			            data: arrPercCasualties,
-			            borderColor: "rgb(237, 78, 237, 1)",
-			            backgroundColor: "rgb(237, 78, 237, 1)",
-			            fill: false,
-			            pointRadius: 0
-			        }]
-			    },
-			    options:{
-			    	responsive: true,
-			    	tooltips: {
-						mode: 'index',
-						intersect: false
-					},
-			    }
-			    
-			});
-		}
-		
-		function hospitalStatus(){
-			var ctx = document.getElementById('chartHospitalStatus');
-			var myChart = new Chart(ctx, {
-			    type: 'line',
-			    data: {
-			        labels: arrLabel,
-			        datasets: [{
-			            label: 'Nuove infezioni',
-			            data: arrNewPositive,
-			            borderColor: "rgb(237, 78, 237, 1)",
-			            backgroundColor: "rgb(237, 78, 237, 1)",
-			            fill: false,
-			            pointRadius: 0
-			        },{
-			            label: 'Nuovi Ricoveri',
-			            data: arrNewHospitalized,
-			            borderColor: "rgb(230, 218, 0, 1)",
-			            backgroundColor: "rgb(230, 218, 0, 1)",
-			            fill: false,
-			            pointRadius: 0
-			        },{
-			            label: 'Di cui in Terapia intensiva',
-			            data: arrNewIntensiveTherapy,
-			            borderColor: "rgb(235, 52, 52, 1)",
-			            backgroundColor: "rgb(235, 52, 52, 1)",
-			            fill: false,
-			            pointRadius: 0
-			        },{
-			            label: 'Nuovi Dismessi/Guariti',
-			            data: arrNewRecovered,
-			            borderColor: "rgb(52, 235, 76, 1)",
-			            backgroundColor: "rgb(52, 235, 76, 1)",
-			            fill: false,
-			            pointRadius: 0
-			        }]
-			    },
-			    options: {
-			        tooltips: {
-						mode: 'index',
-						intersect: false
-					},
-					responsive: true
-			    }
-			});
-		}
-		
-		var dateFormat = "dd/mm/yy";
-		function setDate(){
-			var dateFrom = $( "#dateFrom" ).datepicker({
-								minDate: "24/02/2020",
-					            changeMonth: true,
-					            numberOfMonths: 1,
-					            dateFormat: dateFormat
-					          });
-			var dateTo = $( "#dateTo" ).datepicker({
-					            changeMonth: true,
-					            numberOfMonths: 1,
-					            dateFormat: dateFormat
-					          });
-			
-			dateFrom.on( "change", function() {
-		          dateTo.datepicker( "option", "minDate", getDate( this ) );
-		          updateDates();
-	        });
-			dateTo.on( "change", function() {
-		        dateFrom.datepicker( "option", "maxDate", getDate( this ) );
-		        updateDates();
-		      })
-		}
-		
-		function updateDates(){
-			var from = $.datepicker.formatDate('yymmdd', getDate(document.getElementById("dateFrom")));
-			var to = $.datepicker.formatDate('yymmdd', getDate(document.getElementById("dateTo")));
-			if(from != "" && to != ""){
-				var url ="/Covid19Italy/?from=" + from + "&to=" + to;
-				window.open(url, "_self");
-			}
-		}
-		
-		function getDate( element ) {
-		      var date;
-		      try {
-		        date = $.datepicker.parseDate( dateFormat, element.value );
-		      } catch( error ) {
-		        date = null;
-		      }
-		 
-		      return date;
-		    }
 	/*]]>*/
 	</script>
 	
