--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,34 +19,24 @@
 	<meta property="og:url" content="https://marco.selfip.net/Covid19Italy">
 	<meta property="og:image" th:content="@{/pictures/covid-coronavirus.jpg}">
 	
-	<script 
-		src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" 
-		integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" 
-		crossorigin="anonymous"></script>
-	<script 
-		src="https://code.jquery.com/jquery-3.5.1.min.js" 
-		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
-		crossorigin="anonymous"></script>
-	<script 
-		src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" 
-		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" 
-		crossorigin="anonymous"></script>
-	<link 
-		rel="stylesheet" 
-		href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
-		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
-		crossorigin="anonymous">
-	<script 
-		src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" 
-		integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" 
-		crossorigin="anonymous"></script>
-	<link 
-		rel="stylesheet" 
-		href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" 
-		crossorigin="anonymous">
+	<script th:src="@{/webjars/js/Chart.min.js}"></script>
+	<script th:src="@{/webjars/js/jquery.min.js}"></script>	
+	<script th:src="@{/webjars/js/bootstrap.bundle.min.js}"></script>
+	<script th:src="@{/webjars/js/jquery-ui.min.js}"></script>
+	<script th:src="@{/webjars/js/pnotify.custom.min.js}"></script>
+	<script th:src="@{/webjars/js/jquery-ui.min.js}"></script>
+	
+	<script th:src="@{/webjars/js/MarcoUtils.js}"></script>
 	<script th:src="@{/js/CovidChart.js}"></script>	
 	<script th:src="@{/js/CovidChartDataset.js}"></script>
 	<script th:src="@{/js/CovidCommon.js}"></script>
+	
+	<link rel="stylesheet" th:href="@{/webjars/css/bootstrap.min.css}">
+	<link rel="stylesheet" th:href="@{/webjars/css/jquery-ui.css}">
+	<link rel="stylesheet" th:href="@{/webjars/css/pnotify.custom.min.css}">
+	<link rel="stylesheet" th:href="@{/webjars/css/font-awesome.min.css}">
+	<link rel="stylesheet" th:href="@{/webjars/css/animate.css}">
+	<link rel="stylesheet" th:href="@{/webjars/css/marco.css}">
 	<link rel="stylesheet" th:href="@{/css/style.css}">	
 	
 	
@@ -101,61 +91,92 @@
 		<div class="row">
 			<div class="col">&nbsp;</div>
 		</div>
-		<div class="row">
-			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-				<div class="custom-control custom-switch">
-					<input type="checkbox" class="custom-control-input" id="arrNewInfections">
-					<label class="custom-control-label switch-label color-new-infections" for="arrNewInfections">Nuove Infezioni</label>
+	</div>
+	<nav>
+		<div class="nav nav-tabs" id="nav-tab" role="tablist">
+			<a class="nav-item nav-link active"	id="nav-national-tab"	data-toggle="tab" href="#nav-national"	role="tab" aria-controls="nav-national" aria-selected="true">Grafici Nazionali</a>
+			<a class="nav-item nav-link"		id="nav-region-tab"		data-toggle="tab" href="#nav-region"	role="tab" aria-controls="nav-region"	aria-selected="false">Grafici Regionali</a>
+			<a class="nav-item nav-link"		id="nav-province-tab"	data-toggle="tab" href="#nav-province"	role="tab" aria-controls="nav-province" aria-selected="false">Grafici Provinciali</a>
+		</div>
+	</nav>
+	<div class="tab-content" id="nav-tabContent">
+		<div class="tab-pane fade show active" id="nav-national" role="tabpanel" aria-labelledby="nav-home-tab">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+						<div class="custom-control custom-switch">
+							<input type="checkbox" class="custom-control-input" id="arrNewInfections">
+							<label class="custom-control-label switch-label color-new-infections" for="arrNewInfections">Nuove Infezioni</label>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+						<div class="custom-control custom-switch">
+							<input type="checkbox" class="custom-control-input" id="arrNewTests">
+							<label class="custom-control-label switch-label color-new-tests" for="arrNewTests">Test Eseguiti</label>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+						<div class="custom-control custom-switch">
+							<input type="checkbox" class="custom-control-input" id="arrPercInfections">
+							<label class="custom-control-label switch-label color-perc-infections" for="arrPercInfections">% Infetti su tamponi eseguiti</label>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+						<div class="custom-control custom-switch">
+							<input type="checkbox" class="custom-control-input" id="arrNewCasualties">
+							<label class="custom-control-label switch-label color-new-casualties" for="arrNewCasualties">Decessi</label>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+						<div class="custom-control custom-switch">
+							<input type="checkbox" class="custom-control-input" id="arrPercCasualties">
+							<label class="custom-control-label switch-label color-perc-casualties" for="arrPercCasualties">% Decessi su infetti</label>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+						<div class="custom-control custom-switch">
+							<input type="checkbox" class="custom-control-input" id="arrNewHospitalized">
+							<label class="custom-control-label switch-label color-new-hospitalized" for="arrNewHospitalized">Nuovi Ricoveri</label>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+						<div class="custom-control custom-switch">
+							<input type="checkbox" class="custom-control-input" id="arrNewIntensiveTherapy">
+							<label class="custom-control-label switch-label color-new-intensive-therapy" for="arrNewIntensiveTherapy">Ricoveri Terapia intensiva (Di Cui)</label>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+						<div class="custom-control custom-switch">
+							<input type="checkbox" class="custom-control-input" id="arrNewRecovered">
+							<label class="custom-control-label switch-label color-new-recovered" for="arrNewRecovered">Nuovi Dismessi/Guariti</label>
+						</div>
+					</div>
 				</div>
+				<div class="row">
+					<div class="col-lg-12 col-xl-9">
+						<canvas id="chartPeople"></canvas>
+					</div>
+				</div>		
 			</div>
-			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-				<div class="custom-control custom-switch">
-					<input type="checkbox" class="custom-control-input" id="arrNewTests">
-					<label class="custom-control-label switch-label color-new-tests" for="arrNewTests">Test Eseguiti</label>
-				</div>
-			</div>
-			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-				<div class="custom-control custom-switch">
-					<input type="checkbox" class="custom-control-input" id="arrPercInfections">
-					<label class="custom-control-label switch-label color-perc-infections" for="arrPercInfections">% Infetti su tamponi eseguiti</label>
-				</div>
-			</div>
-			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-				<div class="custom-control custom-switch">
-					<input type="checkbox" class="custom-control-input" id="arrNewCasualties">
-					<label class="custom-control-label switch-label color-new-casualties" for="arrNewCasualties">Decessi</label>
-				</div>
-			</div>
-			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-				<div class="custom-control custom-switch">
-					<input type="checkbox" class="custom-control-input" id="arrPercCasualties">
-					<label class="custom-control-label switch-label color-perc-casualties" for="arrPercCasualties">% Decessi su infetti</label>
-				</div>
-			</div>
-			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-				<div class="custom-control custom-switch">
-					<input type="checkbox" class="custom-control-input" id="arrNewHospitalized">
-					<label class="custom-control-label switch-label color-new-hospitalized" for="arrNewHospitalized">Nuovi Ricoveri</label>
-				</div>
-			</div>
-			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-				<div class="custom-control custom-switch">
-					<input type="checkbox" class="custom-control-input" id="arrNewIntensiveTherapy">
-					<label class="custom-control-label switch-label color-new-intensive-therapy" for="arrNewIntensiveTherapy">Ricoveri Terapia intensiva (Di Cui)</label>
-				</div>
-			</div>
-			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-				<div class="custom-control custom-switch">
-					<input type="checkbox" class="custom-control-input" id="arrNewRecovered">
-					<label class="custom-control-label switch-label color-new-recovered" for="arrNewRecovered">Nuovi Dismessi/Guariti</label>
+		</div>
+		<div class="tab-pane fade" id="nav-region" role="tabpanel" aria-labelledby="nav-profile-tab">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12 col-sm-8 col-md-7 col-lg-6 col-xl-5">
+						<img th:src="@{/pictures/under-costruction.png}" style="width: 100%;">
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-lg-12 col-xl-9">
-				<canvas id="chartPeople"></canvas>
+		<div class="tab-pane fade" id="nav-province" role="tabpanel" aria-labelledby="nav-contact-tab">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12 col-sm-8 col-md-7 col-lg-6 col-xl-5">
+						<img th:src="@{/pictures/under-costruction.png}" style="width: 100%;">
+					</div>
+				</div>
 			</div>
-		</div>		
+		</div>
 	</div>
 </body>
 </html>
