--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,8 +45,8 @@
 	    var data = /*[[${data}]]*/ [];
 	
 		window.onload = function(){
-			CovidCommon.init(data);
-			CovidCommon.drawTheCharts();
+			CovidCommon.init();
+			CovidCommon.updateDates();
 		}
 		
 	/*]]>*/
@@ -103,6 +103,9 @@
 		<div class="tab-pane fade show active" id="nav-national" role="tabpanel" aria-labelledby="nav-home-tab">
 			<div class="container-fluid">
 				<div class="row">
+					<div class="col">&nbsp;</div>
+				</div>
+				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
 						<div class="custom-control custom-switch">
 							<input type="checkbox" class="custom-control-input" id="arrNewInfections">
@@ -153,8 +156,11 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-12 col-xl-9">
-						<canvas id="chartPeople"></canvas>
+					<div class="col">&nbsp;</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-12 col-xl-8">
+						<canvas id="chartNational"></canvas>
 					</div>
 				</div>		
 			</div>
