--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,10 +42,10 @@
 	
 	<script th:inline="javascript">
 	/*<![CDATA[*/
-	    var data = /*[[${data}]]*/ [];
+	    var regions = /*[[${regions}]]*/ [];
 	
 		window.onload = function(){
-			CovidCommon.init();
+			CovidCommon.init(regions);
 			CovidCommon.updateDates();
 		}
 		
@@ -176,6 +176,19 @@
 		</div>
 		<div class="tab-pane fade" id="nav-province" role="tabpanel" aria-labelledby="nav-contact-tab">
 			<div class="container-fluid">
+				<div class="row">
+					<div class="col-lg-12 col-xl-8">
+						<label for="region">Province della regione:</label>
+						<select class="form-control" id="region" >
+							<option th:each="region : ${regions}" th:value="${region.code}" th:text="${region.desc}"></option>
+						</select>
+					</div>
+				</div>	
+				<div class="row">
+					<div class="col-lg-12 col-xl-8">
+						<canvas id="chartProvince"></canvas>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col-12 col-sm-8 col-md-7 col-lg-6 col-xl-5">
 						<img th:src="@{/pictures/under-costruction.png}" style="width: 100%;">
