--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,28 +1,42 @@
-.switch-label{
+.switch-label {
 	font-weight: bold;
 }
 
-.color-new-infections{
+.btn-covid-info {
+	position: absolute;
+    right: 10px;
+    top: 10px;
+    z-index: 10;
+}
+
+.color-new-infections {
 	color: rgb(255, 99, 99, 1);
 }
-.color-new-tests{
+
+.color-new-tests {
 	color: rgb(255, 175, 79, 1);
 }
-.color-perc-infections{
+
+.color-perc-infections {
 	color: rgb(242, 17, 224, 1);
 }
-.color-new-casualties{
+
+.color-new-casualties {
 	color: rgb(31, 235, 255, 1);
 }
-.color-perc-casualties{
+
+.color-perc-casualties {
 	color: rgb(84, 149, 255, 1);
 }
-.color-new-hospitalized{
+
+.color-new-hospitalized {
 	color: rgb(157, 140, 255, 1);
 }
-.color-new-intensive-therapy{
+
+.color-new-intensive-therapy {
 	color: rgb(46, 22, 181, 1);
 }
-.color-new-recovered{
+
+.color-new-recovered {
 	color: rgb(75, 199, 50, 1);
 }
