--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,16 +55,15 @@
 	
 </head>
 <body>
+	<button class="btn btn btn-outline-info btn-covid-info" type="button" data-toggle="collapse" data-target="#infoCard" aria-expanded="false" aria-controls="infoCard">
+		Info
+	</button>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">&nbsp;</div>
 		</div>
 		<div class="row">
 			<div class="col-12">
-				<button class="btn btn-info btn-sm btn-block" type="button" data-toggle="collapse" data-target="#infoCard" aria-expanded="false" aria-controls="infoCard">
-					Informazioni
-				</button>
-				<br>
 				<div class="card card-body collapse" id="infoCard">
 					<p>Ho creato questa pagina web per poter visualizzare la sistuazione del COVID-19 in Italia.
 					I numeri che vengono comunicati dai notiziari non mi permetto di visualizzare la situazione,
@@ -80,7 +79,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-12 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+			<div class="col-8 col-sm-4 col-md-3 col-lg-3 col-xl-2">
 				<div class="input-group input-group-sm">
 					<div class="input-group-prepend">
 						<span class="input-group-text">Data Da</span>
@@ -88,10 +87,10 @@
 					<input type="text" id="dateFrom" class="form-control" th:value="${from}">
 				</div>
 			</div>
-			<div class="col-12 col-sm-1">
+			<div class="col-8 col-sm-1">
 				&nbsp;
 			</div>
-			<div class="col-12 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+			<div class="col-8 col-sm-4 col-md-3 col-lg-3 col-xl-2">
 				<div class="input-group input-group-sm">
 					<div class="input-group-prepend">
 						<span class="input-group-text">Data A</span>
@@ -106,9 +105,9 @@
 	</div>
 	<nav>
 		<div class="nav nav-tabs" id="nav-tab" role="tablist">
-			<a class="nav-item nav-link active"	id="nav-national-tab"	data-toggle="tab" href="#nav-national"	role="tab" aria-controls="nav-national" aria-selected="true">Grafici Nazionali</a>
-			<a class="nav-item nav-link"		id="nav-region-tab"		data-toggle="tab" href="#nav-region"	role="tab" aria-controls="nav-region"	aria-selected="false">Grafici Regionali</a>
-			<a class="nav-item nav-link"		id="nav-province-tab"	data-toggle="tab" href="#nav-province"	role="tab" aria-controls="nav-province" aria-selected="false">Grafici Provinciali</a>
+			<a class="nav-item nav-link active"	id="nav-national-tab"	data-toggle="tab" href="#nav-national"	role="tab" aria-controls="nav-national" aria-selected="true">Dati Nazionali</a>
+			<a class="nav-item nav-link"		id="nav-region-tab"		data-toggle="tab" href="#nav-region"	role="tab" aria-controls="nav-region"	aria-selected="false">Regionali</a>
+			<a class="nav-item nav-link"		id="nav-province-tab"	data-toggle="tab" href="#nav-province"	role="tab" aria-controls="nav-province" aria-selected="false">Provinciali</a>
 		</div>
 	</nav>
 	<div class="tab-content" id="nav-tabContent">
@@ -210,6 +209,7 @@
 						&nbsp;
 					</div>
 				</div>
+				<div class="row" id="rowProvince"></div>
 				<div class="row">
 					<div class="col-lg-12 col-xl-8">
 						<canvas id="chartProvince"></canvas>
