--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,8 +46,7 @@
 	
 		window.onload = function(){
 			CovidCommon.init(regions);
-			CovidCommon.updateDates();
-			$("#region").change();
+			$("#dateFrom").change();
 		}
 		
 	/*]]>*/
