--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -186,7 +186,7 @@
 						&nbsp;
 					</div>
 				</div>
-				<div class="row" id="rowRegioni"></div>
+				<div class="row" id="rowRegion"></div>
 				<div class="row">
 					<div class="col-lg-12 col-xl-8">
 						<canvas id="chartRegions"></canvas>
