--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,9 +27,9 @@
 	<script th:src="@{/webjars/js/jquery-ui.min.js}"></script>
 	
 	<script th:src="@{/webjars/js/MarcoUtils.js}"></script>
-	<script th:src="@{/js/CovidChart.js}"></script>	
-	<script th:src="@{/js/CovidChartDataset.js}"></script>
-	<script th:src="@{/js/CovidCommon.js}"></script>
+	<script th:src="@{/js/CovidChart.js?v=0.0.1}"></script>	
+	<script th:src="@{/js/CovidChartDataset.js?v=0.0.1}"></script>
+	<script th:src="@{/js/CovidCommon.js?v=0.0.1}"></script>
 	
 	<link rel="stylesheet" th:href="@{/webjars/css/bootstrap.min.css}">
 	<link rel="stylesheet" th:href="@{/webjars/css/jquery-ui.css}">
