updating info message

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -244,7 +244,7 @@
 					</p>
 					<p>
 						I dati li recupero direttametne dal sito del Ministero della Salute e vengono aggiornati automaticamente
-						non appena il Ministero rilascia i "nuovi numeri", <b>di solito verso le 18:00 di ogni giorno.</b>
+						non appena il Ministero rilascia i "nuovi numeri", <b>di solito tra le 17:00 e le 18:00 di ogni giorno.</b>
 					</p>
 					<ul>
 						<li>
