Adding the region map

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -37,3 +37,7 @@
 .color-new-recovered {
 	color: rgb(75, 199, 50, 1);
 }
+
+.black-tooltip + .tooltip > .tooltip-inner {
+	background-color: #000000;
+}
