--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -241,7 +241,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-12 col-xl-8">
+					<div class="col-md-8 col-lg-6 col-xl-4">
 						<div th:remove="tag" th:utext="${svgmap}"></div>
 					</div>
 				</div>
