forcing loading of new css

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
 	<link rel="stylesheet" th:href="@{/webjars/css/font-awesome.min.css}">
 	<link rel="stylesheet" th:href="@{/webjars/css/animate.css}">
 	<link rel="stylesheet" th:href="@{/webjars/css/marco.css}">
-	<link rel="stylesheet" th:href="@{/css/style.css}">	
+	<link rel="stylesheet" th:href="@{/css/style.css?v=0.0.3}">	
 	
 	
 	<script th:inline="javascript">
