--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -130,6 +130,19 @@
   padding-bottom: 10px;
 }
 
+.cella_gialla {
+  color: #000000;
+  min-width: 110px;
+  float:left;
+  cursor: pointer;
+  background-color: #fecc00;
+  border: 1px solid #ffffff;
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+
 .cella_mese {
   font-weight: bold;
   font-size: 3em;
