adding vaccines charts

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,6 +44,7 @@
 	/*<![CDATA[*/
 		
 	    var __URLS = /*[[${urls}]]*/ {};
+	    var __REGIONS = /*[[${regions}]]*/ {};
 		
 		window.onload = function(){
 			CovidCommon.init(); // Initialise the app
@@ -274,6 +275,7 @@
 						&nbsp;
 					</div>
 				</div>
+				<div class="row" id="rowRegionVaccines"></div>
 				<div class="row">
 					<div class="col-lg-12 col-xl-8">
 						<canvas id="chartVaccinesDelivered"></canvas>
