--- a/src/main/resources/templates/fragments/tabVaccines.html
+++ b/src/main/resources/templates/fragments/tabVaccines.html
@@ -34,6 +34,23 @@
 				<canvas id="chartVaccinesDelivered"></canvas>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-12">
+				<div class="d-flex justify-content-center">
+					<h5>Fornitori Vaccini</h5>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				&nbsp;
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12 col-xl-8">
+				<canvas id="chartVaccinesSuppliers"></canvas>
+			</div>
+		</div>
 	</div>
 </div>
 
