--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,7 @@
 	
 	<script th:src="@{/webjars/js/MarcoUtils.js}"></script>
 	<script th:src="@{/js/CovidChart.js?v=} + ${appVersion}"></script>	
+	<script th:src="@{/js/DoughnutChart.js?v=} + ${appVersion}"></script>
 	<script th:src="@{/js/CovidChartDataset.js?v=} + ${appVersion}"></script>
 	<script th:src="@{/js/CovidCommon.js?v=} + ${appVersion}"></script>
 	
