adding vaccines data

--- a/src/main/resources/templates/fragments/infoModal.html
+++ b/src/main/resources/templates/fragments/infoModal.html
@@ -26,7 +26,11 @@
 						<a href="https://github.com/marcosolina/covidstatus" style="" target="_blank">Codice sorgente del mio progetto</a>
 				 	</li>
 					<li>
-						<a href="https://github.com/pcm-dpc/COVID-19" target="_blank">Dati del Ministero della Salute</a> 
+						Dati del Ministero della Salute
+						<ul>
+							<li><a href="https://github.com/pcm-dpc/COVID-19" target="_blank">Dati Virus</a></li>
+							<li><a href="https://github.com/italia/covid19-opendata-vaccini" target="_blank">Dati Vaccini</a></li>
+						</ul>
 					</li>
 				</ul>
 			</div>
