--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,7 +55,7 @@
 		window.onload = function(){
 			CovidCommon.init(); // Initialise the app
 			//$("#btnTheme").click();
-			//$("#dateFrom").change(); // Load the first set of data
+			$("#dateFrom").change(); // Load the first set of data
 			//$("#infoModal").modal("show"); // Show the info modal
 			setTimeout(function(){$(".button-notification").fadeIn();}, 2000);
 			setTimeout(function(){$(".button-notification").fadeOut();}, 11000);
