--- a/src/main/resources/templates/fragments/tabVaccines.html
+++ b/src/main/resources/templates/fragments/tabVaccines.html
@@ -54,6 +54,11 @@
 				<canvas id="chartVaccinesPerAge"></canvas>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-12">
+				&nbsp;
+			</div>
+		</div>
 	</div>
 </div>
 
