--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,11 @@
 	<script th:src="@{/js/NationalChart.js?v=} + ${appVersion}"></script>
 	<script th:src="@{/js/RegionsChart.js?v=} + ${appVersion}"></script>
 	<script th:src="@{/js/ProvinceChart.js?v=} + ${appVersion}"></script>
-	<script th:src="@{/js/VaccinesChart.js?v=} + ${appVersion}"></script>
+	<script th:src="@{/js/VaccinesPerPersonChart.js?v=} + ${appVersion}"></script>
+	<script th:src="@{/js/SuppliersVaccinesChart.js?v=} + ${appVersion}"></script>
+	<script th:src="@{/js/DeliveredVaccinesChart.js?v=} + ${appVersion}"></script>
+	<script th:src="@{/js/VaccinesDoseChart.js?v=} + ${appVersion}"></script>
+	<script th:src="@{/js/VaccinesPerAgeChart.js?v=} + ${appVersion}"></script>
 	
 	<link rel="stylesheet" th:href="@{/webjars/css/jquery-ui.css}">
 	<link rel="stylesheet" th:href="@{/webjars/css/bootstrap.min.css}">
